# media-planning-agent

media-planning-agent/: .env.example  pyproject.toml
media-planning-agent/src/media_agent/: __init__.py  main.py
media-planning-agent/src/media_agent/agent/: claude_agent.py  json_registry.py  session.py  system_prompt.md  tool_registry.json
media-planning-agent/src/media_agent/tools/: __init__.py  base.py  mediaplan_tools.py  workspace_tools.py
mediaplanagent/: .gitignore  README.md  pyproject.toml  requirements.txt  standalone_agent_debugger.py
mediaplanagent/scripts/: debug_script.py
mediaplanagent/src/media_agent/: main.py
mediaplanagent/src/media_agent/agent/: __init__.py  base.py  claude_agent.py  system_prompt.md  tool_registry.json
mediaplanagent/src/media_agent/tools/: base.py  mediaplan_tools.py  workspace_tools.py
mediaplanagent/tests/: test_schema_enhancement.py
